@@ -2,11 +2,7 @@ package no.nav.foreldrepenger.abakus.app.exceptions;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
 
-import javax.validation.ConstraintViolation;
 import javax.validation.ConstraintViolationException;
 import javax.validation.Path;
 import javax.ws.rs.core.MediaType;
@@ -21,30 +17,26 @@ import no.nav.vedtak.exception.VLException;
 
 public class ConstraintViolationMapper implements ExceptionMapper<ConstraintViolationException> {
 
-    private static final Logger log = LoggerFactory.getLogger(ConstraintViolationMapper.class);
+    private static final Logger LOG = LoggerFactory.getLogger(ConstraintViolationMapper.class);
 
     @Override
     public Response toResponse(ConstraintViolationException exception) {
         Collection<FeltFeilDto> feilene = new ArrayList<>();
 
-        Set<ConstraintViolation<?>> constraintViolations = exception.getConstraintViolations();
-        for (ConstraintViolation<?> constraintViolation : constraintViolations) {
-            String feltNavn = getFeltNavn(constraintViolation.getPropertyPath());
+        var constraintViolations = exception.getConstraintViolations();
+        for (var constraintViolation : constraintViolations) {
+            var feltNavn = getFeltNavn(constraintViolation.getPropertyPath());
             feilene.add(new FeltFeilDto(feltNavn, constraintViolation.getMessage()));
         }
         VLException feil;
         if (feilene.isEmpty()) {
             feil = FeltValideringFeil.feilUnderValideringAvContraints(exception);
         } else {
-            List<String> feltNavn = feilene.stream().map(FeltFeilDto::toString).collect(Collectors.toList());
+            var feltNavn = feilene.stream().map(FeltFeilDto::toString).toList();
             feil = FeltValideringFeil.feltverdiKanIkkeValideres(feltNavn);
         }
-        log.warn(feil.getMessage());
-        return Response
-            .status(Response.Status.BAD_REQUEST)
-            .entity(new FeilDto(feil.getMessage(), feilene))
-            .type(MediaType.APPLICATION_JSON)
-            .build();
+        LOG.warn(feil.getMessage());
+        return Response.status(Response.Status.BAD_REQUEST).entity(new FeilDto(feil.getMessage(), feilene)).type(MediaType.APPLICATION_JSON).build();
     }
 
     private String getFeltNavn(Path propertyPath) {
