@@ -66,8 +66,7 @@ public class ForvaltningRestTjeneste {
     }
 
     @Inject
-    public ForvaltningRestTjeneste(EntityManager entityManager,
-                                   InntektArbeidYtelseTjeneste iayTjeneste, KoblingTjeneste koblingTjeneste) {
+    public ForvaltningRestTjeneste(EntityManager entityManager, InntektArbeidYtelseTjeneste iayTjeneste, KoblingTjeneste koblingTjeneste) {
         this.entityManager = entityManager;
         this.iayTjeneste = iayTjeneste;
         this.koblingTjeneste = koblingTjeneste;
@@ -77,27 +76,22 @@ public class ForvaltningRestTjeneste {
     @Path("/vaskBegrunnelse")
     @Consumes(APPLICATION_JSON)
     @Produces(APPLICATION_JSON)
-    @Operation(description = "Vasker begrunnelse for ugyldige tegn",
-        tags = "FORVALTNING",
-        responses = {
-            @ApiResponse(responseCode = "200", description = "Forekomster av egen næring med vasket begrunnelse")
-        })
+    @Operation(description = "Vasker begrunnelse for ugyldige tegn", tags = "FORVALTNING", responses = {@ApiResponse(responseCode = "200", description = "Forekomster av egen næring med vasket begrunnelse")})
     @BeskyttetRessurs(actionType = ActionType.CREATE, resource = DRIFT)
     public Response vaskBegrunnelse(@TilpassetAbacAttributt(supplierClass = ForvaltningRestTjeneste.AbacDataSupplier.class) @NotNull @Valid UuidDto eksternReferanse) {
-        OppgittOpptjening oppgittOpptjening = iayTjeneste.hentOppgittOpptjeningFor(eksternReferanse.toUuidReferanse()).orElseThrow();
-        var næringer = oppgittOpptjening.getEgenNæring().stream().filter(OppgittEgenNæring::getVarigEndring).toList();
+        var iayAggregat = iayTjeneste.hentAggregat(new KoblingReferanse(eksternReferanse.getReferanse()));
+        var oppgittOpptjening = iayAggregat.getOppgittOpptjeningAggregat().stream().flatMap(oo -> oo.getOppgitteOpptjeninger().stream()).toList();
+        var næringer = oppgittOpptjening.stream().flatMap(oo -> oo.getEgenNæring().stream().filter(OppgittEgenNæring::getVarigEndring)).toList();
         var antall = næringer.stream().map(næring -> {
-                var begrunnelse = næring.getBegrunnelse().replace("\n", "").replace("\r", "");
-                if (!begrunnelse.equals(næring.getBegrunnelse())) {
-                    return entityManager.createNativeQuery(
-                            "UPDATE iay_egen_naering SET begrunnelse = :begr WHERE id = :enid")
-                        .setParameter("begr", begrunnelse)
-                        .setParameter("enid", næring.getId())
-                        .executeUpdate();
-                }
-                return 0;
+            var begrunnelse = BegrunnelseVasker.vask(næring.getBegrunnelse());
+            if (!begrunnelse.equals(næring.getBegrunnelse())) {
+                return entityManager.createNativeQuery("UPDATE iay_egen_naering SET begrunnelse = :begr WHERE id = :enid")
+                    .setParameter("begr", begrunnelse)
+                    .setParameter("enid", næring.getId())
+                    .executeUpdate();
             }
-        ).reduce(Integer::sum).orElse(0);
+            return 0;
+        }).reduce(Integer::sum).orElse(0);
         return Response.ok(antall).build();
     }
 
@@ -105,11 +99,7 @@ public class ForvaltningRestTjeneste {
     @Path("/settVarigEndring")
     @Consumes(APPLICATION_JSON)
     @Produces(APPLICATION_JSON)
-    @Operation(description = "Setter oppgitt opptjening til å være varig endring",
-        tags = "FORVALTNING",
-        responses = {
-            @ApiResponse(responseCode = "200", description = "Forekomster av utgått aktørid erstattet.")
-        })
+    @Operation(description = "Setter oppgitt opptjening til å være varig endring", tags = "FORVALTNING", responses = {@ApiResponse(responseCode = "200", description = "Forekomster av utgått aktørid erstattet.")})
     @BeskyttetRessurs(actionType = ActionType.UPDATE, resource = GRUNNLAG)
     public Response setVarigEndring(@TilpassetAbacAttributt(supplierClass = ForvaltningRestTjeneste.AbacDataSupplier.class) @NotNull @Valid VarigEndringRequest request) {
         var oppgittOpptjeningEksternReferanse = request.getEksternReferanse().toUuidReferanse();
@@ -133,25 +123,28 @@ public class ForvaltningRestTjeneste {
     @Path("/eliminerInntektsmelding")
     @Consumes(APPLICATION_JSON)
     @Produces(APPLICATION_JSON)
-    @Operation(description = "Fjerner angitt inntektsmelding/journalpost fra grunnlag",
-        tags = "FORVALTNING",
-        responses = {
-            @ApiResponse(responseCode = "200", description = "Inntektsmelding eliminert.")
-        })
+    @Operation(description = "Fjerner angitt inntektsmelding/journalpost fra grunnlag", tags = "FORVALTNING", responses = {@ApiResponse(responseCode = "200", description = "Inntektsmelding eliminert.")})
     @BeskyttetRessurs(actionType = ActionType.UPDATE, resource = GRUNNLAG)
     public Response eliminerInntektsmelding(@TilpassetAbacAttributt(supplierClass = ForvaltningRestTjeneste.AbacDataSupplier.class) @NotNull @Valid EliminerInntektsmeldingRequest request) {
         var koblingReferanse = new KoblingReferanse(request.getEksternReferanse().toUuidReferanse());
         var journalpost = new JournalpostId(request.getJournalpostId());
         var eksisterende = iayTjeneste.hentGrunnlagFor(koblingReferanse).orElseThrow();
         var grunnlagBuilder = InntektArbeidYtelseGrunnlagBuilder.oppdatere(eksisterende);
-        eksisterende.getInntektsmeldinger()
-            .map(InntektsmeldingAggregat::getInntektsmeldinger).orElse(List.of()).stream()
+        var sammeJpId = eksisterende.getInntektsmeldinger()
+            .map(InntektsmeldingAggregat::getInntektsmeldinger)
+            .orElse(List.of())
+            .stream()
             .filter(im -> journalpost.equals(im.getJournalpostId()))
-            .findFirst().orElseThrow();
+            .findFirst();
+        if (sammeJpId.isEmpty()) {
+            throw new IllegalArgumentException("Fant ingen inntektsmelding med angitt journalpostID");
+        }
         var beholdIM = eksisterende.getInntektsmeldinger()
-            .map(InntektsmeldingAggregat::getInntektsmeldinger).orElse(List.of()).stream()
+            .map(InntektsmeldingAggregat::getInntektsmeldinger)
+            .orElse(List.of())
+            .stream()
             .filter(im -> !journalpost.equals(im.getJournalpostId()))
-            .collect(Collectors.toList());
+            .toList();
         grunnlagBuilder.setInntektsmeldinger(new InntektsmeldingAggregat(beholdIM));
         iayTjeneste.lagre(koblingReferanse, grunnlagBuilder);
         return Response.ok().build();
@@ -162,11 +155,7 @@ public class ForvaltningRestTjeneste {
     @Path("/oppdaterAktoerId")
     @Consumes(APPLICATION_JSON)
     @Produces(APPLICATION_JSON)
-    @Operation(description = "MERGE: Oppdaterer aktørid for bruker i nødvendige tabeller",
-        tags = "FORVALTNING",
-        responses = {
-            @ApiResponse(responseCode = "200", description = "Forekomster av utgått aktørid erstattet.")
-        })
+    @Operation(description = "MERGE: Oppdaterer aktørid for bruker i nødvendige tabeller", tags = "FORVALTNING", responses = {@ApiResponse(responseCode = "200", description = "Forekomster av utgått aktørid erstattet.")})
     @BeskyttetRessurs(actionType = ActionType.CREATE, resource = DRIFT)
     public Response oppdaterAktoerId(@TilpassetAbacAttributt(supplierClass = ForvaltningRestTjeneste.AktørRequestAbacDataSupplier.class) @NotNull @Valid ByttAktørRequest request) {
         int antall = oppdaterAktørIdFor(request.getUtgåttAktør().getVerdi(), request.getGyldigAktør().getVerdi());
@@ -177,63 +166,62 @@ public class ForvaltningRestTjeneste {
     @Path("/migrerArbeidsforholdRefForSak")
     @Consumes(APPLICATION_JSON)
     @Produces(APPLICATION_JSON)
-    @Operation(description = "UPDATE: Endrer referanser på IM til referanse som finnes i aareg ved match med ignore case",
-        tags = "FORVALTNING")
+    @Operation(description = "UPDATE: Endrer referanser på IM til referanse som finnes i aareg ved match med ignore case", tags = "FORVALTNING")
     @BeskyttetRessurs(actionType = ActionType.CREATE, resource = DRIFT)
     public Response migrerArbeidsforholdRefForSak(@TilpassetAbacAttributt(supplierClass = ForvaltningRestTjeneste.AbacDataSupplier.class) @NotNull @Valid UuidDto koblingReferanse) {
-        Map<String, ArbeidsforholdReferanse> feilTilRiktigMap = finnMappingFraGammelTilNyReferanse(koblingReferanse);
+        var feilTilRiktigMap = finnMappingFraGammelTilNyReferanse(koblingReferanse);
         var kobling = koblingTjeneste.hentFor(new KoblingReferanse(koblingReferanse.getReferanse()));
-        migrerAlleGrunnlagPåKobling(kobling.get(), feilTilRiktigMap);
+        migrerAlleGrunnlagPåKobling(kobling.orElseThrow(), feilTilRiktigMap);
         return Response.ok().build();
     }
 
     private Map<String, ArbeidsforholdReferanse> finnMappingFraGammelTilNyReferanse(UuidDto koblingReferanse) {
         var inntektArbeidYtelseGrunnlag = iayTjeneste.hentAggregat(new KoblingReferanse(koblingReferanse.getReferanse()));
         var arbeidsforholdInformasjonOpt = inntektArbeidYtelseGrunnlag.getArbeidsforholdInformasjon();
-        var arbeidsforholdInformasjon = arbeidsforholdInformasjonOpt.get();
-        var referanserForKobling = arbeidsforholdInformasjon
-            .getArbeidsforholdReferanser();
-        var referansePrArbeidsgiverMap = referanserForKobling.stream()
-            .collect(Collectors.groupingBy(ArbeidsforholdReferanse::getArbeidsgiver));
+        var arbeidsforholdInformasjon = arbeidsforholdInformasjonOpt.orElseThrow();
+        var referanserForKobling = arbeidsforholdInformasjon.getArbeidsforholdReferanser();
+        var referansePrArbeidsgiverMap = referanserForKobling.stream().collect(Collectors.groupingBy(ArbeidsforholdReferanse::getArbeidsgiver));
 
-        var likeReferanserIgnoreCase = referanserForKobling
-            .stream()
+        var likeReferanserIgnoreCase = referanserForKobling.stream()
             .filter(r -> referansePrArbeidsgiverMap.get(r.getArbeidsgiver()).stream().anyMatch(r2 -> likeHvisIgnoreCaseEllersIkke(r, r2)))
             .collect(Collectors.toSet());
 
-        var alleYrkesaktiviteter = inntektArbeidYtelseGrunnlag.getRegisterVersjon().stream().flatMap(i -> i.getAktørArbeid().stream())
+        var alleYrkesaktiviteter = inntektArbeidYtelseGrunnlag.getRegisterVersjon()
+            .stream()
+            .flatMap(i -> i.getAktørArbeid().stream())
             .flatMap(a -> a.hentAlleYrkesaktiviteter().stream())
             .collect(Collectors.toSet());
 
         var alleInntektsmeldinger = inntektArbeidYtelseGrunnlag.getInntektsmeldinger()
-            .map(InntektsmeldingAggregat::getInntektsmeldinger).orElse(Collections.emptyList());
+            .map(InntektsmeldingAggregat::getInntektsmeldinger)
+            .orElse(Collections.emptyList());
 
         var referanserFraInntektsmelding = likeReferanserIgnoreCase.stream()
-            .filter(r -> alleInntektsmeldinger.stream().anyMatch(im ->
-                im.getArbeidsforholdRef().getReferanse() != null &&
-                    im.getArbeidsforholdRef().getReferanse().equals(r.getInternReferanse().getReferanse())))
+            .filter(r -> alleInntektsmeldinger.stream()
+                .anyMatch(im -> im.getArbeidsforholdRef().getReferanse() != null && im.getArbeidsforholdRef()
+                    .getReferanse()
+                    .equals(r.getInternReferanse().getReferanse())))
             .collect(Collectors.toSet());
 
         var referanserFraAareg = likeReferanserIgnoreCase.stream()
-            .filter(r -> alleYrkesaktiviteter.stream().anyMatch(y ->
-                y.getArbeidsforholdRef().getReferanse() != null &&
-                    y.getArbeidsforholdRef().getReferanse().equals(r.getInternReferanse().getReferanse())))
+            .filter(r -> alleYrkesaktiviteter.stream()
+                .anyMatch(y -> y.getArbeidsforholdRef().getReferanse() != null && y.getArbeidsforholdRef()
+                    .getReferanse()
+                    .equals(r.getInternReferanse().getReferanse())))
             .collect(Collectors.toSet());
 
         var referanserFraInntektsmeldingSomIkkeErIAareg = referanserFraInntektsmelding.stream()
-            .filter(r -> referanserFraAareg.stream().noneMatch(r2 -> r2.getEksternReferanse().getReferanse().equals(r.getEksternReferanse().getReferanse())))
+            .filter(r -> referanserFraAareg.stream()
+                .noneMatch(r2 -> r2.getEksternReferanse().getReferanse().equals(r.getEksternReferanse().getReferanse())))
             .collect(Collectors.toSet());
 
-        return referanserFraInntektsmeldingSomIkkeErIAareg
-            .stream()
-            .collect(Collectors.toMap(
-                r -> r.getInternReferanse().getReferanse(),
+        return referanserFraInntektsmeldingSomIkkeErIAareg.stream()
+            .collect(Collectors.toMap(r -> r.getInternReferanse().getReferanse(),
                 r -> referanserFraAareg.stream().filter(r2 -> likeHvisIgnoreCaseEllersIkke(r, r2)).findFirst().orElseThrow()));
     }
 
     private void migrerAlleGrunnlagPåKobling(Kobling kobling, Map<String, ArbeidsforholdReferanse> feilTilRiktigMap) {
-        var alleIayGrunnlag = iayTjeneste.hentAlleGrunnlagFor(kobling.getAktørId(),
-            kobling.getSaksnummer(), kobling.getYtelseType(), false);
+        var alleIayGrunnlag = iayTjeneste.hentAlleGrunnlagFor(kobling.getAktørId(), kobling.getSaksnummer(), kobling.getYtelseType(), false);
         for (var gr : alleIayGrunnlag) {
             migrerGrunnlag(feilTilRiktigMap, gr);
         }
@@ -262,7 +250,8 @@ public class ForvaltningRestTjeneste {
 
     private void fjernFeilOgLeggTilRiktig(Map<String, ArbeidsforholdReferanse> feilTilRiktigMap, ArbeidsforholdInformasjon informasjon) {
         if (harFeilReferanse(feilTilRiktigMap, informasjon)) {
-            informasjon.getArbeidsforholdReferanser().stream()
+            informasjon.getArbeidsforholdReferanser()
+                .stream()
                 .filter(r -> feilTilRiktigMap.containsKey(r.getInternReferanse().getReferanse()))
                 .forEach(ref -> {
                     var riktigReferanse = feilTilRiktigMap.get(ref.getInternReferanse().getReferanse());
@@ -270,7 +259,8 @@ public class ForvaltningRestTjeneste {
                         .setParameter("sletteId", ref.getId());
                     deleteQuery.executeUpdate();
                     if (!harInformasjonRiktigReferanse(informasjon, riktigReferanse.getInternReferanse())) {
-                        var kopi = new ArbeidsforholdReferanse(riktigReferanse.getArbeidsgiver(), riktigReferanse.getInternReferanse(), riktigReferanse.getEksternReferanse());
+                        var kopi = new ArbeidsforholdReferanse(riktigReferanse.getArbeidsgiver(), riktigReferanse.getInternReferanse(),
+                            riktigReferanse.getEksternReferanse());
                         ForvaltningReferanseTjeneste.leggTilReferanse(informasjon, kopi);
                     }
                 });
@@ -282,38 +272,53 @@ public class ForvaltningRestTjeneste {
         return informasjon.getArbeidsforholdReferanser().stream().anyMatch(r -> feilTilRiktigMap.containsKey(r.getInternReferanse().getReferanse()));
     }
 
-    private boolean harInformasjonRiktigReferanse(ArbeidsforholdInformasjon informasjon,
-                                                  InternArbeidsforholdRef riktigReferanse) {
+    private boolean harInformasjonRiktigReferanse(ArbeidsforholdInformasjon informasjon, InternArbeidsforholdRef riktigReferanse) {
         return informasjon.getArbeidsforholdReferanser().stream().anyMatch(r -> r.getInternReferanse().equals(riktigReferanse));
     }
 
     private boolean harFeilInternReferanse(Map<String, ArbeidsforholdReferanse> feilTilRiktigMap, Inntektsmelding im) {
-        return im.getArbeidsforholdRef().gjelderForSpesifiktArbeidsforhold() &&
-            feilTilRiktigMap.keySet().stream().anyMatch(r -> r.equals(im.getArbeidsforholdRef().getReferanse()));
+        return im.getArbeidsforholdRef().gjelderForSpesifiktArbeidsforhold() && feilTilRiktigMap.keySet()
+            .stream()
+            .anyMatch(r -> r.equals(im.getArbeidsforholdRef().getReferanse()));
     }
 
     private boolean likeHvisIgnoreCaseEllersIkke(ArbeidsforholdReferanse r, ArbeidsforholdReferanse r2) {
-        return !r2.getEksternReferanse().getReferanse().equals(r.getEksternReferanse().getReferanse())
-            && r2.getEksternReferanse().getReferanse().equalsIgnoreCase(r.getEksternReferanse().getReferanse());
+        return !r2.getEksternReferanse().getReferanse().equals(r.getEksternReferanse().getReferanse()) && r2.getEksternReferanse()
+            .getReferanse()
+            .equalsIgnoreCase(r.getEksternReferanse().getReferanse());
     }
 
 
     private int oppdaterAktørIdFor(String gammel, String gjeldende) {
         int antall = 0;
         antall += entityManager.createNativeQuery("UPDATE kobling SET bruker_aktoer_id = :gjeldende WHERE bruker_aktoer_id = :gammel")
-            .setParameter(GJELDENDE, gjeldende).setParameter(GAMMEL, gammel).executeUpdate();
+            .setParameter(GJELDENDE, gjeldende)
+            .setParameter(GAMMEL, gammel)
+            .executeUpdate();
         antall += entityManager.createNativeQuery("UPDATE kobling SET bruker_aktoer_id = :gjeldende WHERE bruker_aktoer_id = :gammel")
-            .setParameter(GJELDENDE, gjeldende).setParameter(GAMMEL, gammel).executeUpdate();
+            .setParameter(GJELDENDE, gjeldende)
+            .setParameter(GAMMEL, gammel)
+            .executeUpdate();
         antall += entityManager.createNativeQuery("UPDATE kobling SET annen_part_aktoer_id = :gjeldende WHERE annen_part_aktoer_id = :gammel")
-            .setParameter(GJELDENDE, gjeldende).setParameter(GAMMEL, gammel).executeUpdate();
+            .setParameter(GJELDENDE, gjeldende)
+            .setParameter(GAMMEL, gammel)
+            .executeUpdate();
         antall += entityManager.createNativeQuery("UPDATE iay_aktoer_inntekt SET AKTOER_ID = :gjeldende WHERE AKTOER_ID = :gammel")
-            .setParameter(GJELDENDE, gjeldende).setParameter(GAMMEL, gammel).executeUpdate();
+            .setParameter(GJELDENDE, gjeldende)
+            .setParameter(GAMMEL, gammel)
+            .executeUpdate();
         antall += entityManager.createNativeQuery("UPDATE iay_aktoer_arbeid SET AKTOER_ID = :gjeldende WHERE AKTOER_ID = :gammel")
-            .setParameter(GJELDENDE, gjeldende).setParameter(GAMMEL, gammel).executeUpdate();
+            .setParameter(GJELDENDE, gjeldende)
+            .setParameter(GAMMEL, gammel)
+            .executeUpdate();
         antall += entityManager.createNativeQuery("UPDATE iay_aktoer_ytelse SET AKTOER_ID = :gjeldende WHERE AKTOER_ID = :gammel")
-            .setParameter(GJELDENDE, gjeldende).setParameter(GAMMEL, gammel).executeUpdate();
+            .setParameter(GJELDENDE, gjeldende)
+            .setParameter(GAMMEL, gammel)
+            .executeUpdate();
         antall += entityManager.createNativeQuery("UPDATE vedtak_ytelse SET AKTOER_ID = :gjeldende WHERE AKTOER_ID = :gammel")
-            .setParameter(GJELDENDE, gjeldende).setParameter(GAMMEL, gammel).executeUpdate();
+            .setParameter(GJELDENDE, gjeldende)
+            .setParameter(GAMMEL, gammel)
+            .executeUpdate();
         entityManager.flush();
         return antall;
     }
@@ -328,6 +333,7 @@ public class ForvaltningRestTjeneste {
     public static class AktørRequestAbacDataSupplier implements Function<Object, AbacDataAttributter> {
 
         public AktørRequestAbacDataSupplier() {
+            // Jackson
         }
 
         @Override
